--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "pretty-ms": "^7.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-bootstrap-range-slider": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-indiana-drag-scroll": "^1.6.1",
     "react-p5": "^1.3.2",
